--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-996) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Tue,  6 Feb 2007 18:26:04 -0800
+
 untangle-java (0.2.0-995) stable; urgency=low
 
   * auto build
