--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-998) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Fri,  9 Feb 2007 12:40:53 -0800
+
 untangle-java (0.2.0-997) stable; urgency=low
 
   * auto build
