--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1002) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Sat, 10 Feb 2007 14:19:34 -0800
+
 untangle-java (0.2.0-1001) stable; urgency=low
 
   * auto build
