--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1004) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Mon, 12 Feb 2007 18:52:13 -0800
+
 untangle-java (0.2.0-1003) stable; urgency=low
 
   * auto build
