--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1007) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Wed, 14 Feb 2007 14:59:52 -0800
+
 untangle-java (0.2.0-1006) stable; urgency=low
 
   * auto build
