--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1010) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Wed, 14 Feb 2007 16:04:44 -0800
+
 untangle-java (0.2.0-1009) stable; urgency=low
 
   * auto build
