--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1027) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Tue, 27 Feb 2007 12:51:25 -0800
+
 untangle-java (0.2.0-1026) stable; urgency=low
 
   * auto build
