--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1028) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Tue, 27 Feb 2007 16:01:24 -0800
+
 untangle-java (0.2.0-1027) stable; urgency=low
 
   * auto build
