--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1032) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Wed, 28 Feb 2007 12:58:23 -0800
+
 untangle-java (0.2.0-1031) stable; urgency=low
 
   * auto build
