--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1035) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Wed, 28 Feb 2007 16:58:10 -0800
+
 untangle-java (0.2.0-1034) stable; urgency=low
 
   * auto build
