--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1037) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Thu,  1 Mar 2007 12:03:01 -0800
+
 untangle-java (0.2.0-1036) stable; urgency=low
 
   * auto build
