--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1044) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Thu,  1 Mar 2007 17:39:24 -0800
+
 untangle-java (0.2.0-1043) stable; urgency=low
 
   * auto build
