--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1048) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Fri,  2 Mar 2007 09:53:26 -0800
+
 untangle-java (0.2.0-1047) stable; urgency=low
 
   * auto build
