--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1067) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Tue, 13 Mar 2007 15:02:51 -0700
+
 untangle-java (0.2.0-1066) stable; urgency=low
 
   * auto build
