--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1069) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Wed, 14 Mar 2007 19:32:07 -0700
+
 untangle-java (0.2.0-1068) stable; urgency=low
 
   * auto build
