--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1071) stable; urgency=low
+
+  * auto build
+
+ -- John Irwin <jdi@bebe.metavize.com>  Thu, 15 Mar 2007 18:22:20 -0700
+
 untangle-java (0.2.0-1070) stable; urgency=low
 
   * auto build
