--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1080) stable; urgency=low
+
+  * auto build
+
+ -- root <root@bebe.metavize.com>  Wed, 21 Mar 2007 11:32:11 -0700
+
 untangle-java (0.2.0-1079) stable; urgency=low
 
   * auto build
