--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1091) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Fri, 23 Mar 2007 16:59:41 -0700
+
 untangle-java (0.2.0-1090) stable; urgency=low
 
   * auto build
