--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1104) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Thu,  5 Apr 2007 13:57:37 -0700
+
 untangle-java (0.2.0-1103) stable; urgency=low
 
   * auto build
