--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-java (0.2.0-1108) stable; urgency=low
+
+  * auto build
+
+ -- Ian Nieves <inieves@bebe.metavize.com>  Mon, 16 Apr 2007 12:49:17 -0700
+
 untangle-java (0.2.0-1107) stable; urgency=low
 
   * auto build
