debhelper compat level set to 4 upgraded Standards-Version to current (3.7.2)
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10135 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mvvm (5.0.0~svn20070509r10072-1) mustang; urgency=low
+
+  * auto build
+
+ -- Sebastien Delafond <seb@untangle.com>  Wed,  9 May 2007 19:01:41 -0700
+
 mvvm (5.0.0~svn-1) mustang; urgency=low
 
   * Initial one.
