--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-vm (5.0.0~svn20070621r11355-1) amread; urgency=low
+
+  * auto build
+
+ -- Aaron Read <amread@untangle.com>  Thu, 21 Jun 2007 21:19:29 -0400
+
 untangle-vm (5.0.0~svn20070615r10990+seb20070615T100005-1) seb; urgency=low
 
   * auto build
