--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-For developer build type: rake
+For developer build: rake
 For Debian packages: debuild -us -uc
 For more information: http://wiki.untangle.com/index.php/Building_the_Code
