Forcing version to 5.0.1-1
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11903 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-vm (5.0.1-1) mustang-1; urgency=low
+
+  * auto build
+
+ --  <seb@untangle.com>  Fri, 27 Jul 2007 14:42:35 -0700
+
 untangle-vm (5.0.0~svn20070621r11355-1) amread; urgency=low
 
   * auto build
