Forcing version to 5.0.2-1
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/release-5.0/work/src@12073 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-vm (5.0.2-1) mustang-2; urgency=low
+
+  * auto build
+
+ -- Robert Scott <rbscott@untangle.com>  Tue, 21 Aug 2007 15:20:25 -0700
+
 untangle-vm (5.0.1-1) mustang-1; urgency=low
 
   * auto build
