Forcing version to 5.0.3-1
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/release-5.0/work/src@12481 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-vm (5.0.3-1) mustang-3; urgency=low
+
+  * auto build
+
+ --  <seb@untangle.com>  Mon, 22 Oct 2007 17:03:07 -0700
+
 untangle-vm (5.0.2-1) mustang-2; urgency=low
 
   * auto build
