--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+untangle-vm (5.0.3.1-1) mustang-3; urgency=low
+
+  * auto build
+
+ --  <seb@untangle.com>  Fri, 26 Oct 2007 11:37:32 -0700
+
 untangle-vm (5.0.3-2) mustang-3; urgency=low
 
   * auto build
