--- a/uvm-lib/servlets/webui/po/ro.po
+++ b/uvm-lib/servlets/webui/po/ro.po
@@ -2,21 +2,21 @@
 # Copyright (C) 2008 Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <cmatei@untangle.com>, 2008.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-02-15 17:43+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"POT-Creation-Date: 2008-02-15 13:27+0200\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"MIME-Version: 1.0\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=0; null;\n"
 
-#: ../root/WEB-INF/jsp/startPage.jsp:96
+#: ../root/WEB-INF/jsp/startPage.jsp:96 ../root/WEB-INF/jsp/startPage.jsp:92
 msgid "Help"
 msgstr "Ajutor"
 
@@ -24,3 +24,7 @@ msgstr "Ajutor"
 msgid "Show Settings"
 msgstr "Afişează Setările"
 
+#: ../root/WEB-INF/jsp/startPage.jsp:58
+#, python-format
+msgid "%s and %s"
+msgstr "%s şi %s"
