Translations for main web-ui application, protofiler and spyware nodes
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15655 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/spyware/po/keys.pot
+++ b/spyware/po/keys.pot
@@ -147,7 +147,7 @@ msgid "Name"
 msgstr ""
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:324
-msgid "ipMaddr"
+msgid "Subnet"
 msgstr ""
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:325
