--- a/uvm-lib/servlets/webui/po/ro.po
+++ b/uvm-lib/servlets/webui/po/ro.po
@@ -2,18 +2,18 @@
 # Copyright (C) 2008 Untangle, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <cmatei@untangle.com>, 2008.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-20 17:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
+"POT-Creation-Date: 2008-02-20 17:03+0200\n"
 "Content-Type: text/plain; charset=utf-8\n"
+"MIME-Version: 1.0\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Plural-Forms: nplurals=0; null;\n"
 
 msgid "decimal_sep"
@@ -28,83 +28,98 @@ msgstr "d-m-Y"
 msgid "timestamp_fmt"
 msgstr "d-m-Y G:i:s"
 
-#: ../root/script/main.js:37 ../root/script/main.js:43
-#: ../root/script/main.js:49 ../root/script/main.js:55
-#: ../root/script/main.js:61 ../root/script/main.js:75
-#: ../root/script/main.js:187 ../root/script/main.js:216
-#: ../root/script/main.js:245 ../root/script/main.js:286
-#: ../root/script/main.js:293 ../root/script/main.js:334
-#: ../root/script/main.js:369 ../root/script/main.js:384
-#: ../root/script/main.js:396 ../root/script/main.js:430
-#: ../root/script/main.js:436 ../root/script/main.js:448
-#: ../root/script/main.js:586 ../root/script/components.js:136
-#: ../root/script/components.js:143 ../root/script/components.js:186
-#: ../root/script/components.js:230 ../root/script/components.js:296
-#: ../root/script/components.js:458 ../root/script/components.js:846
-#: ../root/script/components.js:880 ../root/script/components.js:1142
+#: ../root/script/main.js:37
+#: ../root/script/main.js:43
+#: ../root/script/main.js:49
+#: ../root/script/main.js:55
+#: ../root/script/main.js:61
+#: ../root/script/main.js:75
+#: ../root/script/main.js:187
+#: ../root/script/main.js:216
+#: ../root/script/main.js:245
+#: ../root/script/main.js:286
+#: ../root/script/main.js:293
+#: ../root/script/main.js:334
+#: ../root/script/main.js:369
+#: ../root/script/main.js:384
+#: ../root/script/main.js:396
+#: ../root/script/main.js:430
+#: ../root/script/main.js:436
+#: ../root/script/main.js:448
+#: ../root/script/main.js:586
+#: ../root/script/components.js:136
+#: ../root/script/components.js:143
+#: ../root/script/components.js:186
+#: ../root/script/components.js:230
+#: ../root/script/components.js:296
+#: ../root/script/components.js:458
+#: ../root/script/components.js:846
+#: ../root/script/components.js:880
+#: ../root/script/components.js:1142
 msgid "Failed"
-msgstr ""
+msgstr "Eşuat"
 
 #: ../root/script/main.js:75
 msgid "Failed loading I18N translations for main rack"
-msgstr ""
+msgstr "Încărcarea traducerilor pentru rackul principal a eşuat"
 
-#: ../root/script/main.js:115 ../root/script/components.js:362
+#: ../root/script/main.js:115
+#: ../root/script/components.js:362
 #: ../root/script/components.js:982
 msgid "Help"
 msgstr "Ajutor"
 
 #: ../root/script/main.js:129
 msgid "loading"
-msgstr ""
+msgstr "se încarcă"
 
 #: ../root/script/main.js:232
 msgid "Networking"
-msgstr ""
+msgstr "Reţea"
 
 #: ../root/script/main.js:233
 msgid "Remote Admin"
-msgstr ""
+msgstr "Administrare la distanţa"
 
 #: ../root/script/main.js:234
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: ../root/script/main.js:235
 msgid "User Directory"
-msgstr ""
+msgstr "User Directory"
 
 #: ../root/script/main.js:236
 msgid "Backup/Restore"
-msgstr ""
+msgstr "Copie se siguranţă/Restaurare"
 
 #: ../root/script/main.js:237
 msgid "Support"
-msgstr ""
+msgstr "Suport"
 
 #: ../root/script/main.js:238
 msgid "Upgrade"
-msgstr ""
+msgstr "Upgrade"
 
 #: ../root/script/main.js:239
 msgid "Setup Info"
-msgstr ""
+msgstr "Informaţii setări"
 
 #: ../root/script/main.js:553
 msgid "Services & Utilities"
-msgstr ""
+msgstr "Servicii & Utilitare"
 
 #: ../root/script/main.js:553
 msgid "Services"
-msgstr ""
+msgstr "Servicii"
 
 #: ../root/script/main.js:585
 msgid "Show Policy Manager"
-msgstr ""
+msgstr "Afişează Managerul de Politici"
 
 #: ../root/script/components.js:186
 msgid "Failed loading I18N translations for this node"
-msgstr ""
+msgstr "Încărcarea traducerilor pentru acest nod a eşuat"
 
 #: ../root/script/components.js:356
 msgid "Show Settings"
@@ -112,195 +127,183 @@ msgstr "Afişează Setările"
 
 #: ../root/script/components.js:368
 msgid "Remove"
-msgstr ""
+msgstr "Şterge"
 
-#: ../root/script/components.js:374 ../root/script/components.js:988
+#: ../root/script/components.js:374
+#: ../root/script/components.js:988
 msgid "Cancel"
-msgstr ""
+msgstr "Anulează"
 
 #: ../root/script/components.js:380
 msgid "Save"
-msgstr ""
+msgstr "Salvează"
 
 #: ../root/script/components.js:394
-msgid ""
-"The <B>Status Indicator</B> shows the current operating condition of a "
+msgid "The <B>Status Indicator</B> shows the current operating condition of a"
 "particular software product."
-msgstr ""
+msgstr "<B>Indicatorul de Stare</B> afişează condiţia curenta de operare a unui anumit produs software."
 
 #: ../root/script/components.js:395
 msgid "Green"
-msgstr ""
+msgstr "Verde"
 
 #: ../root/script/components.js:395
 msgid "indicates that the product is \"on\" and operating normally."
-msgstr ""
+msgstr "indică faptul ca produsul este pornit si funcţionează normal."
 
 #: ../root/script/components.js:396
 msgid "Red"
-msgstr ""
+msgstr "Roşu"
 
 #: ../root/script/components.js:396
-msgid ""
-"indicates that the product is \"on\", but that an abnormal condition has "
+msgid "indicates that the product is \"on\", but that an abnormal condition has"
 "occurred."
-msgstr ""
+msgstr "indică faptul ca produsul este pornit dar o condiţie anormala a apărut."
 
 #: ../root/script/components.js:397
 msgid "Yellow"
-msgstr ""
+msgstr "Galben"
 
 #: ../root/script/components.js:397
 msgid "indicates that the product is saving or refreshing settings."
-msgstr ""
+msgstr "indică faptul ca produsul salvează sau actualizează setări."
 
 #: ../root/script/components.js:398
 msgid "Clear"
-msgstr ""
+msgstr "Curăţă"
 
 #: ../root/script/components.js:398
-msgid ""
-"indicates that the product is \"off\", and may be turned \"on\" by the user."
-msgstr ""
+msgid "indicates that the product is \"off\", and may be turned \"on\" by the user."
+msgstr "indică faptul ca produsul este oprit dar poate fi pornit de către utilizator."
 
 #: ../root/script/components.js:401
-msgid ""
-"The <B>Power Button</B> allows you to turn a product \"on\" and \"off\"."
-msgstr ""
+msgid "The <B>Power Button</B> allows you to turn a product \"on\" and \"off\"."
+msgstr "<B>Butonul Pornire</B> permite pornirea, respectiv oprirea produsului."
 
 #: ../root/script/components.js:494
 msgid "activity"
-msgstr ""
+msgstr "activitate"
 
 #: ../root/script/components.js:568
 msgid "system"
-msgstr ""
+msgstr "sistem"
 
 #: ../root/script/components.js:578
 msgid "Current Session Count:"
-msgstr ""
+msgstr "Număr de Sesiuni Curente:"
 
 #: ../root/script/components.js:579
 msgid "ACC:"
-msgstr ""
+msgstr "ACC:"
 
 #: ../root/script/components.js:580
 msgid "REQ:"
-msgstr ""
+msgstr "REQ:"
 
 #: ../root/script/components.js:581
 msgid "Data rate:"
-msgstr ""
+msgstr "Rata de date:"
 
 #: ../root/script/components.js:783
-#, fuzzy
 msgid "timestamp"
-msgstr "d-m-Y G:i:s"
+msgstr "moment de timp"
 
 #: ../root/script/components.js:786
 msgid "action"
-msgstr ""
+msgstr "acţiune"
 
 #: ../root/script/components.js:787
 msgid "blocked"
-msgstr ""
+msgstr "blocat"
 
 #: ../root/script/components.js:787
 msgid "passed"
-msgstr ""
+msgstr "permis"
 
 #: ../root/script/components.js:790
 msgid "client"
-msgstr ""
+msgstr "client"
 
 #: ../root/script/components.js:791
 msgid "request"
-msgstr ""
+msgstr "cerere"
 
 #: ../root/script/components.js:792
 msgid "reason for action"
-msgstr ""
+msgstr "motivul acţiunii"
 
 #: ../root/script/components.js:793
 msgid "blocked in block list"
-msgstr ""
+msgstr "blocat"
 
 #: ../root/script/components.js:793
 msgid "not blocked in block list"
-msgstr ""
+msgstr "neblocat"
 
 #: ../root/script/components.js:796
 msgid "server"
-msgstr ""
+msgstr "server"
 
 #: ../root/script/components.js:805
 msgid "Event Log"
-msgstr ""
+msgstr "Log Evenimente"
 
-#: ../root/script/components.js:831 ../root/script/components.js:832
+#: ../root/script/components.js:831
+#: ../root/script/components.js:832
 msgid "Refresh"
-msgstr ""
+msgstr "Reîmprospătează"
 
 #: ../root/script/components.js:994
 msgid "Update"
-msgstr ""
+msgstr "Actualizează"
 
-#: ../root/script/components.js:1031 ../root/script/components.js:1256
+#: ../root/script/components.js:1031
+#: ../root/script/components.js:1256
 msgid "Edit"
-msgstr ""
+msgstr "Editează"
 
 #: ../root/script/components.js:1303
 msgid "Delete"
-msgstr ""
+msgstr "Şterge"
 
 #: ../root/script/components.js:1448
 msgid "Add"
-msgstr ""
+msgstr "Adaugă"
 
 #: ../root/script/components.js:1449
 msgid "Add New Row"
-msgstr ""
+msgstr "Adaugă Rând Nou"
 
-#: node display name
 msgid "OpenVPN"
-msgstr ""
+msgstr "OpenVPN"
 
-#: node display name
 msgid "Web Filter"
-msgstr ""
+msgstr "Filtrare Web"
 
-#: node display name
 msgid "Spyware Blocker"
-msgstr ""
+msgstr "Protecţie Spyware"
 
-#: node display name
 msgid "Attack Blocker"
-msgstr ""
+msgstr "Protecţie împotriva atacurilor"
 
-#: node display name
 msgid "Virus Blocker"
-msgstr ""
+msgstr "Protecţie împotriva viruşilor"
 
-#: node display name
 msgid "Protocol Control"
-msgstr ""
+msgstr "Controlul Protocoalelor"
 
-#: node display name
 msgid "Spam Blocker"
-msgstr ""
+msgstr "Protecţie Spam"
 
-#: node display name
 msgid "Firewall"
-msgstr ""
+msgstr "Firewall"
 
-#: node display name
 msgid "Intrusion Prevention"
-msgstr ""
+msgstr "Protecţie împotriva intruziunii"
 
-#: node display name
 msgid "Phish Blocker"
-msgstr ""
+msgstr "Protecţie Phish"
 
-#: node display name
 msgid "Untangle Reports"
-msgstr ""
+msgstr "Rapoarte Untangle"
+
