update translation files
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15657 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/protofilter/po/ro.po
+++ b/protofilter/po/ro.po
@@ -540,3 +540,11 @@ msgstr "Web"
 msgid "Worm"
 msgstr "Vierme"
 
+#: Event Log repository name
+msgid "Protocol Events"
+msgstr "Evenimente Protocoale"
+
+#: Event Log repository name
+msgid "Blocked Protocol Events"
+msgstr "Evenimente Protocoale Blocate"
+
