Change row editor input lines using  Ext.form.Field components
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15817 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/protofilter/po/ro.po
+++ b/protofilter/po/ro.po
@@ -36,6 +36,10 @@ msgstr "[fără protocol]"
 msgid "[no description]"
 msgstr "[fără descriere]"
 
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:33
+msgid "[no signature]"
+msgstr "[fără signatură]"
+
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:34
 msgid "Protocol List"
 msgstr "Listă Protocoale"
