Fix misspelled word "Successed" (Closes: #4158)
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16356 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/po/administration.pot
+++ b/uvm-lib/servlets/webui/po/administration.pot
@@ -67,11 +67,11 @@ msgid "Please wait while your skin is uploaded..."
 msgstr ""
 
 #: ../root/script/config/administration.js:195
-msgid "Successed"
+msgid "Succeeded"
 msgstr ""
 
 #: ../root/script/config/administration.js:195
-msgid "Upload Skin Successed"
+msgid "Upload Skin Succeeded"
 msgstr ""
 
 #: ../root/script/config/administration.js:200
